--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
-    "react-native-screens": "^4.10.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-router": "^7.5.3",
     "react-router-native": "^6.30.0"
   },
