--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-blur": "~14.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-status-bar": "~2.2.3",
+    "nativewind": "^2.0.11",
     "react": "^19.0.0",
     "react-native": "^0.79.2",
     "react-native-gesture-handler": "~2.24.0",
@@ -23,18 +24,20 @@
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-qrcode-svg": "^6.3.15",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-reanimated": "^3.16.2",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "15.11.2",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-router": "^7.5.3",
-    "react-router-native": "^6.30.0"
+    "react-router-native": "^6.30.0",
+    "rn-range-slider": "^2.2.2",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~19.0.10",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
