--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-blur": "~14.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-status-bar": "~2.2.3",
+    "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
     "react": "^19.0.0",
     "react-native": "^0.79.2",
@@ -26,6 +27,7 @@
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^3.16.2",
     "react-native-screens": "^4.10.0",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "15.11.2",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
