--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/slider": "^4.5.6",
     "expo": "^53.0.0",
     "expo-blur": "~14.1.4",
     "expo-linear-gradient": "~14.1.4",
@@ -31,7 +33,6 @@
     "react-native-vector-icons": "^10.2.0",
     "react-router": "^7.5.3",
     "react-router-native": "^6.30.0",
-    "rn-range-slider": "^2.2.2",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
