--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nativewind": "^2.0.11",
     "react": "^19.0.0",
     "react-native": "^0.79.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^18.0.0",
@@ -28,7 +29,7 @@
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^3.16.2",
     "react-native-screens": "^4.10.0",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.11.2",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-router": "^7.5.3",
