--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^7.3.12",
     "@react-navigation/native": "^7.1.8",
     "expo": "^53.0.0",
+    "expo-av": "^15.1.4",
     "expo-blur": "~14.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-status-bar": "~2.2.3",
@@ -35,6 +36,7 @@
     "react-native-svg": "15.11.2",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.14.0",
     "react-router": "^7.5.3",
     "react-router-native": "^6.30.0",
     "tailwindcss": "^3.3.2"
