--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/bottom-tabs": "^7.3.12",
     "@react-navigation/native": "^7.1.8",
-    "expo": "^53.0.0",
+    "expo": "53.0.9",
     "expo-av": "^15.1.4",
     "expo-blur": "~14.1.4",
     "expo-linear-gradient": "~14.1.4",
@@ -38,9 +38,11 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.14.0",
+  
     "react-router": "^7.5.3",
     "react-router-native": "^6.30.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "expo-camera": "~16.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
