--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@react-navigation/bottom-tabs": "^7.3.12",
     "@react-navigation/native": "^7.1.8",
     "expo": "53.0.9",
-    "expo-av": "^15.1.4",
     "expo-blur": "~14.1.4",
+    "expo-camera": "~16.1.6",
     "expo-linear-gradient": "~14.1.4",
     "expo-media-library": "^17.1.6",
     "expo-status-bar": "~2.2.3",
@@ -38,11 +38,9 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.14.0",
-  
     "react-router": "^7.5.3",
     "react-router-native": "^6.30.0",
-    "tailwindcss": "^3.3.2",
-    "expo-camera": "~16.1.6"
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
